tests/invalid_inputs/sema/class_method_not_call.cpp

struct S {
	void f() {}
};

void foo() {
	S s;
	s.f;	// error: method used in non-call context
}
